[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://spotlight.png" type="Texture" id=2]
[ext_resource path="res://Player.png" type="Texture" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
color = Color( 0.0980392, 0.231373, 0.584314, 1 )
shadow_enabled = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="new_health" from="." to="HUD" method="_on_Player_new_health"]
[connection signal="set_health" from="." to="HUD" method="_on_Player_set_health"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
